Melhoria no swagger
